spacing fixed

--- a/mustache/voting/static/css/custom.css
+++ b/mustache/voting/static/css/custom.css
@@ -27,9 +27,9 @@ label { font-weight: 400; }
 .comments [id^="comments"] p
 { margin-left: 1em; }
 
-.comments form,
-.comments p
-{ margin-top: 1em; }
+.comments form { margin-top: 1em; }
+
+.comments .loginorregister { margin-top: 1em; }
 
 .comments h4 {
 	border-bottom: solid 1px #ddd;
@@ -37,7 +37,7 @@ label { font-weight: 400; }
 	box-shadow: 0 5px 12px -3px rgba(0,0,0,0.1);
 }
 
-
+.dontforget,
 .or {
 	border: solid 1px #aaa;
 	border-radius: 15px;
@@ -46,3 +46,5 @@ label { font-weight: 400; }
 	font-weight: bold;
 	padding: 3px 5px;
 }
+
+.dontforget { background-color: #d0edf1; }
